--- a/css/style.css
+++ b/css/style.css
@@ -167,12 +167,12 @@ img {
 .hero {
     padding: 188px 0;
     background-color: var(--title-text-color);
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/people-office.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(./images/people-office.jpg);
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    isplay: flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
